Fix the shortcode visibility issue on the list of tables page

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -357,8 +357,10 @@ $fixed_header_height: 50px;
 		border: none;
 		box-shadow: none;
 		margin: 0;
+		max-width: 230px;
 		outline: none;
 		padding: 0;
+		width: 100%;
 	}
 }
 
